// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput.vue renders OXD Input 1`] = `
<div class="input-outer-wrapper">
  <!--v-if-->
  <!--v-if--><input class="oxd-input oxd-input--active" type="password" label="Input">
</div>
`;

exports[`PasswordInput.vue should renders OXD Input with custom color 1`] = `
<div class="input-outer-wrapper">
  <!--v-if-->
  <!--v-if--><input class="oxd-input oxd-input--active" style="background-color: aliceblue;" type="password" label="Input">
</div>
`;

exports[`PasswordInput.vue should renders OXD Input with error 1`] = `
<div class="input-outer-wrapper">
  <!--v-if-->
  <!--v-if--><input class="oxd-input oxd-input--active oxd-input--error" type="password" label="Input">
</div>
`;
